# LuminWallpaper

./: README.md
examples/: CMakeLists.txt
examples/glfw/: CMakeLists.txt  main.cpp
examples/raylib/: main.cpp
include/: lumin.h
src/platform/linux/: desktop_integration_linux.cpp
src/platform/macos/: desktop_integration_macos.mm
src/platform/windows/: desktop_integration_windows.cpp
